--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html class="no-js" lang="es">
-  <head>
+ <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>
@@ -23,30 +23,73 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    {% block extra_css %} {% endblock extra_css %}
-  </head>
+    {% block extra_css %}
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f8f9fa;
+      }
 
-  <body >
+      #right-panel {
+        padding: 20px;
+      }
+
+      .header {
+        background-color: #007bff;
+        color: white;
+        padding: 10px 0;
+      }
+
+      .header-menu {
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      .nav-item {
+        margin-left: 15px;
+      }
+
+      .nav-item a {
+        color: white;
+        text-decoration: none;
+      }
+
+      .content {
+        margin-top: 20px;
+      }
+
+      .new-post-button-container {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+      }
+
+      .new-post-button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border-radius: 50%;
+        text-decoration: none;
+      }
+    </style>
+    {% endblock extra_css %}
+ </head>
+
+ <body>
     <div id="right-panel">
       <header id="header" class="header">
-        <div class="top-right">
-       
-        <div class="top-right">
-          <div class="header-menu">
-            <ul class="nav nav-tabs ">
-              <li class="nav-item">
-                <a href="{% url 'corp:post_new' %}"><i class="fa fa-edit"></i>Nuevo Post</a>
-               
-
-              </li>
-
-              <li class="nav-item">
-                <a href="{% url 'logout'%}"
-                  ><i class="fa fa-power-off"></i>Logout</a
-                >
-              </li>
-            </ul>
-          </div>
+        <div class="header-menu">
+          <ul class="nav nav-tabs">
+            <li class="nav-item">
+              <a href="{% url 'corp:post_new' %}"><i class="fa fa-edit"></i> Nuevo Post</a>
+            </li>
+            <li class="nav-item">
+              <a href="{% url 'logout'%}"><i class="fa fa-power-off"></i> Logout</a>
+            </li>
+          </ul>
         </div>
       </header>
 
@@ -54,30 +97,16 @@
         <div class="row">
           <div class="col-lg-12">
             {% block body %}
-            <div class="col-md-12 prueba">
-              <div class="card bg-primary">
-                <div class="card-body">
-                  <blockquote class="blockquote mb-0 text-light text-center">
-                    <h1 class="text-light">
-                      {{ user.username | upper }} BIENVENIDO A BIBLIOTECA.UC
-                    </h1>
-                  </blockquote>
-                </div>
-              </div>
-            </div>
             {% endblock body %}
           </div>
         </div>
       </div>
 
-    </div>
-
+    
     <!-- Minimal jQuery and Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@2.2.4/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"></script>
     <!-- Custom JS -->
-   
-
     {% block extrajs %} {% endblock extrajs %}
-  </body>
+ </body>
 </html>
